# ya-dns

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  appveyor.yml  config.toml  config.yaml  proxy-list.txt
.github/: dependabot.yml
.github/workflows/: build.yml  release.yml
examples/: chinadns-domain.toml  chinadns-domain.yaml  chinadns.toml  chinadns.yaml  opennic.toml  opennic.yaml  template.toml  template.yaml
src/: app_config.rs  config.rs  domain.rs  filter.rs  handler.rs  handler_config.rs  loger.rs  logger.rs  main.rs  option.rs  resolver.rs  resolver_proxy.rs  resolver_runtime_provider.rs
