[package]
authors = ["zyj"]
edition = "2021"
name = "yadns"
version = "0.6.5"

[features]
default = ["default-doh-rustls", "default-doh3-rustls"]

default-doh-rustls = [
  "default-dot-rustls",
  "dns-over-https",
  "hickory-resolver/dns-over-https-rustls"
]
default-dot-openssl = ["dns-over-tls", "hickory-resolver/dns-over-openssl"]
default-dot-rustls = [
  "dns-over-tls",
  "hickory-resolver/dns-over-rustls",
  "hickory-resolver/webpki-roots",
  "hickory-resolver/native-certs",
]
default-doh3-rustls = [
  "default-dot-rustls",
  "dns-over-h3"
]
default-tcp_udp = []

dns-over-https = ["hickory-resolver/dns-over-https"]
dns-over-tls = ["hickory-resolver/dns-over-tls"]
dns-over-h3 = ["hickory-resolver/dns-over-h3"]

[dependencies]
async-http-proxy = {version = "1", features = ["runtime-tokio", "basic-auth"]}
async-recursion = "1"
async-trait = "0.1"
clap = {version = "4", features = ["derive"]}
crossbeam-channel = "0.5"
fast-socks5 = "0.10"
futures = {version = "0.3", default-features = false, features = ["executor"]}
hickory-proto = "0.24"
hickory-resolver = {version = "0.24", default-features = false, features = ["tokio-runtime"]}
hickory-server = "0.24"
ipnet = "2"
iprange = "0.6"
once_cell = "1"
publicsuffix = "2"
regex = "1"
serde = "1"
serde_derive = "1"
slog = "2"
slog-async = "2"
slog-term = "2"
thiserror = "1"
tokio = "1"
toml = "0.8"
url = "2"

[profile.release]
lto = true
opt-level = 3
# codegen-units = 1
panic = "abort"
strip = "symbols"
