[package]
authors = ["zyj"]
edition = "2021"
name = "yadns"
version = "0.7.0"

[features]
default = ["default-doh", "default-doh3", "logging"]

default-doh = [
  "default-dot",
  "dns-over-https"
]
default-dot = [
  "dns-over-tls"
]
default-doh3 = [
  "default-dot",
  "dns-over-h3"
]
default-tcp_udp = []

dns-over-https = ["hickory-resolver/https-ring"]
dns-over-tls = ["hickory-resolver/tls-ring", "hickory-resolver/webpki-roots", "hickory-resolver/rustls-platform-verifier"]
dns-over-h3 = ["dep:quinn", "hickory-resolver/h3-ring"]
logging = ["dep:env_logger"]

[dependencies]
async-http-proxy = {version = "1", features = ["runtime-tokio", "basic-auth"]}
async-recursion = "1"
async-trait = "0.1"
clap = {version = "4", features = ["derive"]}
crossbeam-channel = "0.5"
env_logger = {version = "0.11", optional = true}
fast-socks5 = "0.10"
futures = {version = "0.3", default-features = false, features = ["executor"]}
hickory-proto = "0.25"
hickory-resolver = {version = "0.25", default-features = false, features = ["tokio"]}
hickory-server = "0.25"
ipnet = "2"
iprange = "0.6"
log = "0.4"
publicsuffix = "2"
quinn = {version = "0.11.9", optional = true}
regex = "1"
serde = "1"
serde_derive = "1"
thiserror = "1"
tokio = "1"
toml = "0.9"
url = "2"

[profile.release]
lto = true
opt-level = 3
# codegen-units = 1
panic = "abort"
strip = "symbols"
