[package]
authors = ["zyj"]
edition = "2024"
name = "yadns"
version = "0.7.5"

[features]
default = ["default-doh", "default-doh3", "default-quic", "logging"]

default-dot = [
  "dns-over-tls"
]
default-doh = [
  "dns-over-tls",
  "dns-over-https"
]
default-doh3 = [
  "dns-over-tls",
  "dns-over-h3"
]
default-quic = [
  "dns-over-tls",
  "dns-over-quic"
]
default-tcp_udp = []

dns-over-tls = ["hickory-resolver/tls-ring", "hickory-resolver/webpki-roots", "hickory-resolver/rustls-platform-verifier"]
dns-over-https = ["hickory-resolver/https-ring"]
dns-over-h3 = ["dep:quinn", "dep:pin-project-lite", "hickory-resolver/h3-ring"]
dns-over-quic = ["dep:quinn", "dep:pin-project-lite", "hickory-resolver/quic-ring"]
logging = ["dep:env_logger"]
debug = ["dep:console-subscriber", "tokio/full", "tokio/tracing"]

[dependencies]
async-http-proxy = {version = "1", features = ["runtime-tokio", "basic-auth"]}
async-recursion = "1"
async-trait = "0.1"
clap = {version = "4", features = ["derive"]}
console-subscriber = {version = "0.5", optional = true}
env_logger = {version = "0.11", optional = true, default-features = false, features = ["auto-color", "humantime"]}
fast-socks5 = "0.10"
futures = {version = "0.3", default-features = false, features = ["executor"]}
hickory-proto = {version = "0.25", default-features = false}
hickory-resolver = {version = "0.25", default-features = false, features = ["tokio"]}
hickory-server = {version = "0.25", default-features = false}
ipnet = "2"
iprange = "0.6"
log = "0.4"
pin-project-lite = {version = "0.2", optional = true}
publicsuffix = "2"
quinn = {version = "0.11", optional = true}
regex = {version = "1", default-features = false, features = ["unicode"]}
serde = "1"
serde_derive = "1"
thiserror = "2"
tokio = "1"
toml = "0.9"
serde_yaml = "0.9"
url = "2"

[profile.release]
lto = true
opt-level = 3
# codegen-units = 1
panic = "abort"
strip = "symbols"
